# demos

./: .gitignore  README.md  main.py
File-Inclusion/: Dockerfile  README.md  php.ini
File-Inclusion/challenge/: index.html  level1.php  level2.php
SQL-injection/: Containerfile  README.md  db.sqlite.sqbpro
SQL-injection/src/: db.sqlite  main.py
SQL-injection/src/templates/: login.html
SQL-injection/templates/: home.html  style.css
SSTI/: Containerfile  Dockerfile  README.md
SSTI/src/: main.py
SSTI/src/static/images/: index.html
SSTI/src/templates/: index.html
file-upload/: Cargo.toml  Containerfile
file-upload/src/: index.html  main.rs
file-upload/templates/: error.html  file_index.html  index.html
templates/: home.html  login.html  script.js
