[package]
name = "file-upload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
] }
handlebars = "4.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3"
